--- a/faq.html
+++ b/faq.html
@@ -38,15 +38,19 @@
 				position: absolute;
 				left: 1rem;
 				top: .1rem;
-				
-
 				font-size: 2rem;
+				transition: .3s all ease-in-out;
 			}
 			
 			details[open] summary {
 				border-radius: .5rem .5rem 0 0;
-				border: none;
+				border: .125rem solid turquoise;
 				background-color: turquoise;
+			}
+
+			details[open] summary::before {
+				transition: .3s all ease-in-out;
+				transform: rotate(45deg);
 			}
 
 			summary + p {
