--- a/rating.html
+++ b/rating.html
@@ -5,6 +5,7 @@
 		<title>Rating / Progressive Enhancement / FDND</title>
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 		<link href="assets/styles.css" rel="stylesheet">
+		<script src="assets/script.js" defer></script>
 		<style>
 			/* Schrijf hier gewoon je CSS voor dit component */
 			
@@ -14,6 +15,19 @@
 			*/
 
 			/* Hint: met Grid Layout kun je elementen over elkaar heen leggen */
+			input {
+				width: 3em;
+				height: 3em;
+				cursor: pointer;
+				display: inline-block;
+				border: none;
+				background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="%2366E5BF" d="M32 12.408l-11.056-1.607-4.944-10.018-4.944 10.018-11.056 1.607 8 7.798-1.889 11.011 9.889-5.199 9.889 5.199-1.889-11.011 8-7.798zM16 23.547l-6.983 3.671 1.334-7.776-5.65-5.507 7.808-1.134 3.492-7.075 3.492 7.075 7.807 1.134-5.65 5.507 1.334 7.776-6.983-3.671z"></path></svg>');
+				color: transparent;
+			}
+
+			.filledStar {
+				background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="%2366E5BF" d="M32 12.408l-11.056-1.607-4.944-10.018-4.944 10.018-11.056 1.607 8 7.798-1.889 11.011 9.889-5.199 9.889 5.199-1.889-11.011 8-7.798z"></path></svg>');
+			}
 		</style>
 	</head>
 	<body>
@@ -34,7 +48,11 @@
 		<form method="post">
 
 			<!-- Hint: hoeveel verschillende ratings kun je geven? -->
-
+			<input type="button" id="star-1" name="star" value="1">
+			<input type="button" id="star-2" name="star" value="2">
+			<input type="button" id="star-3" name="star" value="3">
+			<input type="button" id="star-4" name="star" value="4">
+			<input type="button" id="star-5" name="star" value="5">
 		</form>
 
 		<details open>
